src/test/ui/unconstrained-ref.stderr
error[E0282]: type annotations needed
  --> $DIR/unconstrained-ref.rs:6:5
   |
LL |     S { o: &None };
   |     ^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `S`
   |
help: consider specifying the generic argument
   |
LL |     S::<T> { o: &None };
   |      +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
